15 February 2008: Wouter
	- added FreeBSD rc.d script to contrib.
	- --prefix option for configure also changes directory: pidfile:
	  and chroot: defaults in config file.
	- added cache speed test, for cache size OK and cache too small.

14 February 2008: Wouter
	- start without a config file (will complain, but start with
	  defaults).
	- perf test program works.

13 February 2008: Wouter
	- 0.9 released.
	- 1.0 development. Printout ldns version on unbound -h.
	- start of perf tool.
	- bugfix to read empty lines from /etc/hosts.

12 February 2008: Wouter
	- fixup problem with configure calling itself if ldns-src tarball
	  is not present.

11 February 2008: Wouter
	- changed library to use ub_ instead of ub_val_ as prefix.
	- statistics output text nice.
	- etc/hosts handling.
	- library function to put logging to a stream.
	- set any option interface.

8 February 2008: Wouter
	- test program for multiple queries over a TCP channel.
	- tpkg test for stream tcp queries.
	- unbound replies to multiple TCP queries on a TCP channel.
	- fixup misclassification of root referral with NS in answer
	  when validating a nonrec query.
	- tag 0.9
	- layout of manpages, spelling fix in header, manpages process by
	  makedist, list asynclook and tcpstream tests as ldns-testns
	  required.

7 February 2008: Wouter
	- moved up all current level 2 to be level 3. And 3 to 4.
	  to make room for new debug level 2 for detailed information 
	  for operators.
	- verbosity level 2. Describes recursion and validation.
	- cleaner configure script and fixes for libevent solaris.
	- signedness for log output memory sizes in high verbosity.

6 February 2008: Wouter
	- clearer explanation of threading configure options.
	- fixup asynclook test for nothreading (it creates only one process
	  to do the extended test).
	- changed name of ub_val_result_free to ub_val_resolve_free.
	- removes warning message during library linking, renamed